refactor(tests): Update Auth, Trainee, Trainer, and Training service tests
Replaced `AuthManager` mocks with `AuthenticationInfoService` and other relevant Spring Security components in service-layer unit tests. Aligned all business logic test cases with the new security implementation.