@@ -6,8 +6,8 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -15,13 +15,10 @@ import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
 
 import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -30,14 +27,13 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import com.epam.gym_crm.api.dto.UserCreationResult;
 import com.epam.gym_crm.api.dto.request.UserActivationRequest;
 import com.epam.gym_crm.api.dto.request.trainee.TraineeCreateRequest;
 import com.epam.gym_crm.api.dto.request.trainee.TraineeUpdateRequest;
 import com.epam.gym_crm.api.dto.request.trainee.TraineeUpdateTrainersRequest;
 import com.epam.gym_crm.api.dto.response.TraineeProfileResponse;
-import com.epam.gym_crm.api.dto.response.TrainerInfoResponse;
 import com.epam.gym_crm.api.dto.response.UserRegistrationResponse;
-import com.epam.gym_crm.auth.AuthManager;
 import com.epam.gym_crm.db.entity.Trainee;
 import com.epam.gym_crm.db.entity.Trainer;
 import com.epam.gym_crm.db.entity.Training;
@@ -48,9 +44,8 @@ import com.epam.gym_crm.db.repository.TrainerRepository;
 import com.epam.gym_crm.db.repository.TrainingRepository;
 import com.epam.gym_crm.db.repository.UserRepository;
 import com.epam.gym_crm.domain.exception.BaseException;
-import com.epam.gym_crm.domain.exception.ErrorMessage;
-import com.epam.gym_crm.domain.exception.MessageType;
 import com.epam.gym_crm.domain.service.IAuthenticationService;
+import com.epam.gym_crm.domain.service.impl.AuthenticationInfoService;
 import com.epam.gym_crm.domain.service.impl.TraineeServiceImpl;
 import com.epam.gym_crm.monitoring.metric.AppMetrics;
 
@@ -64,882 +59,359 @@ class TraineeServiceImplTest {
 	@Mock
 	private TrainerRepository trainerRepository;
 	@Mock
+	private TrainingRepository trainingRepository;
+	@Mock
 	private IAuthenticationService authenticationService;
 	@Mock
-	private AuthManager authManager;
+	private AuthenticationInfoService authenticationInfoService;
 	@Mock
-	private TrainingRepository trainingRepository;
+	private AppMetrics appMetrics;
 
 	@InjectMocks
 	private TraineeServiceImpl traineeService;
-	
-	@Mock 
-	private AppMetrics appMetrics;
 
 	private User testUser;
 	private Trainee testTrainee;
-	private TraineeCreateRequest createRequest;
-	private TraineeUpdateRequest updateRequest;
-	private UserActivationRequest activationRequest;
-
-	private User trainerUser1;
-	private Trainer trainer1;
-	private User trainerUser2;
-	private Trainer trainer2;
-	private TrainingType strengthTrainingType;
-	private TrainingType cardioTrainingType;
 
 	@BeforeEach
 	void setUp() {
-		testUser = new User();
-		testUser.setId(1L);
-		testUser.setFirstName("Test");
-		testUser.setLastName("Trainee");
-		testUser.setUsername("Test.Trainee");
-		testUser.setPassword("password123");
-		testUser.setActive(true);
-
-		testTrainee = new Trainee();
-		testTrainee.setId(1L);
-		testTrainee.setUser(testUser);
-		testTrainee.setDateOfBirth(LocalDate.of(2000, 1, 1));
-		testTrainee.setAddress("Test Address");
-		testTrainee.setTrainers(new HashSet<>());
-
-		createRequest = new TraineeCreateRequest();
-		createRequest.setFirstName("New");
-		createRequest.setLastName("Trainee");
-		createRequest.setDateOfBirth(LocalDate.of(1995, 5, 10));
-		createRequest.setAddress("New Trainee Address");
-
-		updateRequest = new TraineeUpdateRequest();
-		updateRequest.setUsername("Test.Trainee");
-		updateRequest.setFirstName("Updated");
-		updateRequest.setLastName("Trainee");
-		updateRequest.setDateOfBirth(LocalDate.of(1996, 6, 11));
-		updateRequest.setAddress("Updated Address");
-
-		activationRequest = new UserActivationRequest();
-		activationRequest.setUsername("Test.Trainee");
-		activationRequest.setIsActive(false);
-
-		this.traineeService = new TraineeServiceImpl(traineeRepository, authenticationService, authManager,
-				userRepository, trainerRepository, trainingRepository,appMetrics);
-
-		testUser = new User(1L, "Test", "User", "test.user", "pass123", true, null, null);
-		testTrainee = new Trainee(10L, LocalDate.of(2000, 1, 1), "Some Address", testUser, new HashSet<>(),
-				new HashSet<>());
-
-		strengthTrainingType = new TrainingType(20L, "Strength");
-		cardioTrainingType = new TrainingType(21L, "Cardio");
-
-		trainerUser1 = new User(30L, "Trainer", "One", "Trainer.One", "passOne", true, null, null);
-		trainer1 = new Trainer(31L, strengthTrainingType, trainerUser1, new HashSet<>(), new HashSet<>());
-
-		trainerUser2 = new User(40L, "Trainer", "Two", "Trainer.Two", "passTwo", true, null, null);
-		trainer2 = new Trainer(41L, cardioTrainingType, trainerUser2, new HashSet<>(), new HashSet<>());
+		testUser = new User(1L, "Test", "Trainee", "Test.Trainee", "pass", true, null, null);
+		testTrainee = new Trainee(1L, LocalDate.now(), "Address", testUser, new HashSet<>(), new HashSet<>());
 	}
 
 	// --- createTrainee Tests ---
-
 	@Test
 	void shouldCreateTraineeSuccessfully() {
+		TraineeCreateRequest request = new TraineeCreateRequest("New", "Trainee", null, null);
+		User newUser = new User(2L, "New", "Trainee", "New.Trainee", "encoded", true, null, null);
+		UserCreationResult creationResult = new UserCreationResult(newUser, "rawPassword");
 
-		User newUser = new User();
-		newUser.setId(2L);
-		newUser.setFirstName(createRequest.getFirstName());
-		newUser.setLastName(createRequest.getLastName());
-		newUser.setUsername("New.Trainee");
-		newUser.setPassword("generatedPass");
-		newUser.setActive(true);
+		when(authenticationService.prepareUserWithCredentials(anyString(), anyString())).thenReturn(creationResult);
+		when(traineeRepository.save(any(Trainee.class))).thenReturn(new Trainee(2L, null, null, newUser, null, null));
+		when(authenticationService.createAccessToken(newUser)).thenReturn("dummy.token");
 
-		Trainee newTrainee = new Trainee();
-		newTrainee.setId(2L);
-		newTrainee.setUser(newUser);
-		newTrainee.setDateOfBirth(createRequest.getDateOfBirth());
-		newTrainee.setAddress(createRequest.getAddress());
-		newTrainee.setTrainers(new HashSet<>());
+		UserRegistrationResponse response = traineeService.createTrainee(request);
 
-		// Çünkü servis metodu 'false' ile çağırıyor.
-		when(authenticationService.createAndSaveUser(createRequest.getFirstName(), createRequest.getLastName()))
-				.thenReturn(newUser);
-
-		when(traineeRepository.save(any(Trainee.class))).thenReturn(newTrainee);
-
-		// When
-		UserRegistrationResponse response = traineeService.createTrainee(createRequest);
-
-		// Then
 		assertNotNull(response);
-		assertEquals(newUser.getUsername(), response.getUsername());
-
-		verify(authenticationService).createAndSaveUser(createRequest.getFirstName(), createRequest.getLastName());
-		verify(traineeRepository).save(any(Trainee.class));
+		assertEquals("New.Trainee", response.getUsername());
+		assertEquals("rawPassword", response.getPassword());
+		verify(appMetrics).incrementTraineeCreation();
 	}
 
 	@Test
 	void shouldThrowExceptionWhenCreateRequestIsNull() {
-		BaseException exception = assertThrows(BaseException.class, () -> traineeService.createTrainee(null));
-		assertTrue(exception.getMessage().contains("Trainee can not be null"));
-		verifyNoInteractions(authenticationService);
-		verifyNoInteractions(traineeRepository);
+		assertThrows(BaseException.class, () -> traineeService.createTrainee(null));
+		verifyNoInteractions(authenticationService, traineeRepository);
 	}
 
 	@Test
 	void shouldPropagateExceptionWhenUserCreationFails() {
-		when(authenticationService.createAndSaveUser(anyString(), anyString()))
-				.thenThrow(new BaseException(new ErrorMessage(MessageType.INVALID_ARGUMENT, "User creation failed")));
-
-		BaseException exception = assertThrows(BaseException.class, () -> traineeService.createTrainee(createRequest));
-		assertTrue(exception.getMessage().contains("User creation failed"));
-		verify(authenticationService).createAndSaveUser(anyString(), anyString());
-		verify(traineeRepository, never()).save(any(Trainee.class));
+		TraineeCreateRequest request = new TraineeCreateRequest("Fail", "User", null, null);
+		when(authenticationService.prepareUserWithCredentials(anyString(), anyString()))
+				.thenThrow(new RuntimeException("DB Error"));
+		assertThrows(RuntimeException.class, () -> traineeService.createTrainee(request));
+		verify(traineeRepository, never()).save(any());
 	}
 
 	// --- findTraineeById Tests ---
-
 	@Test
 	void shouldFindTraineeByIdSuccessfully() {
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("any.user");
+		when(traineeRepository.findById(1L)).thenReturn(Optional.of(testTrainee));
 
-		when(authManager.getCurrentUser()).thenReturn(testUser);
+		TraineeProfileResponse response = traineeService.findTraineeById(1L);
 
-		when(traineeRepository.findById(testTrainee.getId())).thenReturn(Optional.of(testTrainee));
-
-		TraineeProfileResponse response = traineeService.findTraineeById(testTrainee.getId());
-
-		// Then
 		assertNotNull(response);
-		assertEquals(testTrainee.getUser().getUsername(), response.getUsername());
-
-		verify(authManager).getCurrentUser(); // Added this verify
-
-		verify(traineeRepository).findById(testTrainee.getId());
+		assertEquals(testUser.getUsername(), response.getUsername());
 	}
 
 	@Test
 	void shouldThrowExceptionWhenFindByIdNotFound() {
-		when(authManager.getCurrentUser()).thenReturn(testUser);
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("any.user");
 		when(traineeRepository.findById(999L)).thenReturn(Optional.empty());
-		BaseException exception = assertThrows(BaseException.class, () -> traineeService.findTraineeById(999L));
-
-		assertTrue(exception.getMessage().contains("Trainee not found with ID: 999"));
-		verify(authManager).getCurrentUser();
-		verify(traineeRepository).findById(999L);
+		assertThrows(BaseException.class, () -> traineeService.findTraineeById(999L));
 	}
 
 	@Test
 	void shouldThrowExceptionWhenFindByIdWithNullId() {
-		when(authManager.getCurrentUser()).thenReturn(testUser); // Servis metodu authManager kullanıyor
-		BaseException exception = assertThrows(BaseException.class, () -> traineeService.findTraineeById(null));
-
-		assertTrue(
-				exception.getMessage().contains("Trainee ID for lookup must be a positive value. Provided ID: null"));
-		verify(authManager).getCurrentUser();
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("any.user");
+		assertThrows(BaseException.class, () -> traineeService.findTraineeById(null));
 		verifyNoInteractions(traineeRepository);
 	}
 
 	// --- findTraineeByUsername Tests ---
-
 	@Test
 	void shouldFindTraineeByUsernameSuccessfully() {
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("any.user");
+		when(traineeRepository.findByUserUsername("Test.Trainee")).thenReturn(Optional.of(testTrainee));
 
-		when(authManager.getCurrentUser()).thenReturn(testUser);
+		TraineeProfileResponse response = traineeService.findTraineeByUsername("Test.Trainee");
 
-		when(traineeRepository.findByUserUsername(testUser.getUsername())).thenReturn(Optional.of(testTrainee));
-
-		// When
-		TraineeProfileResponse response = traineeService.findTraineeByUsername(testUser.getUsername());
-
-		// Then
 		assertNotNull(response);
 		assertEquals(testUser.getUsername(), response.getUsername());
-
-		verify(authManager).getCurrentUser();
-
-		verify(traineeRepository).findByUserUsername(testUser.getUsername());
 	}
 
 	@Test
 	void shouldThrowExceptionWhenFindByUsernameNotFound() {
-		when(authManager.getCurrentUser()).thenReturn(testUser);
-		when(traineeRepository.findByUserUsername("NonExistent.User")).thenReturn(Optional.empty());
-		BaseException exception = assertThrows(BaseException.class,
-				() -> traineeService.findTraineeByUsername("NonExistent.User"));
-
-		assertTrue(exception.getMessage().contains("Trainee not found with username: NonExistent.User"));
-		verify(authManager).getCurrentUser(); // Kullanılıyorsa verify et
-		verify(traineeRepository).findByUserUsername("NonExistent.User");
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("any.user");
+		when(traineeRepository.findByUserUsername("non.existent")).thenReturn(Optional.empty());
+		assertThrows(BaseException.class, () -> traineeService.findTraineeByUsername("non.existent"));
 	}
 
 	@Test
 	void shouldThrowExceptionWhenFindByUsernameWithNullOrEmpty() {
-
-		when(authManager.getCurrentUser()).thenReturn(new User());
-
-		// When & Then (Testing for null username)
-		BaseException exceptionNull = assertThrows(BaseException.class,
-				() -> traineeService.findTraineeByUsername(null));
-		// The expected message includes the prefix from MessageType.INVALID_ARGUMENT
-		assertEquals("Invalid parameter provided. : Trainee username for lookup must not be null or empty.",
-				exceptionNull.getMessage());
-
-		// When & Then (Testing for empty username)
-		BaseException exceptionEmpty = assertThrows(BaseException.class,
-				() -> traineeService.findTraineeByUsername(""));
-		// The expected message also includes the prefix
-		assertEquals("Invalid parameter provided. : Trainee username for lookup must not be null or empty.",
-				exceptionEmpty.getMessage());
-
-		verify(authManager, times(2)).getCurrentUser();
-
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("any.user");
+		assertThrows(BaseException.class, () -> traineeService.findTraineeByUsername(null));
+		assertThrows(BaseException.class, () -> traineeService.findTraineeByUsername(""));
 		verifyNoInteractions(traineeRepository);
-		verifyNoInteractions(userRepository);
 	}
 
 	// --- getAllTrainees Tests ---
-
 	@Test
 	void shouldGetAllTraineesSuccessfully() {
-
-		when(authManager.getCurrentUser()).thenReturn(testUser);
-
-		Trainee trainee2 = new Trainee();
-		User user2 = new User();
-		user2.setUsername("user2");
-		trainee2.setUser(user2);
-		trainee2.setTrainers(new HashSet<>());
-
-		List<Trainee> trainees = Arrays.asList(testTrainee, trainee2);
-		when(traineeRepository.findAll()).thenReturn(trainees);
-
-		// When
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("any.user");
+		when(traineeRepository.findAll()).thenReturn(List.of(testTrainee));
 		List<TraineeProfileResponse> responses = traineeService.getAllTrainees();
-
-		// Then
-		assertNotNull(responses);
-		assertEquals(2, responses.size());
-		assertEquals(testTrainee.getUser().getUsername(), responses.get(0).getUsername());
-		assertEquals(trainee2.getUser().getUsername(), responses.get(1).getUsername());
-
-		verify(authManager).getCurrentUser();
-
-		verify(traineeRepository).findAll();
+		assertEquals(1, responses.size());
 	}
 
 	@Test
 	void shouldReturnEmptyListWhenNoTraineesExist() {
-
-		when(authManager.getCurrentUser()).thenReturn(testUser);
-
-		when(traineeRepository.findAll()).thenReturn(new ArrayList<>());
-
-		// When
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("any.user");
+		when(traineeRepository.findAll()).thenReturn(Collections.emptyList());
 		List<TraineeProfileResponse> responses = traineeService.getAllTrainees();
-
-		// Then
-		assertNotNull(responses);
 		assertTrue(responses.isEmpty());
-
-		verify(authManager).getCurrentUser();
-
-		verify(traineeRepository).findAll();
 	}
 
 	// --- updateTrainee Tests ---
-
 	@Test
 	void shouldUpdateTraineeSuccessfully() {
-		// Given
-		User existingUser = new User();
-		existingUser.setId(1L);
-		existingUser.setUsername("Test.Trainee");
-		existingUser.setFirstName("Old");
-		existingUser.setLastName("Trainee");
-		existingUser.setPassword("oldPass");
-		existingUser.setActive(true);
-
-		Trainee existingTrainee = new Trainee();
-		existingTrainee.setId(1L);
-		existingTrainee.setUser(existingUser);
-		existingTrainee.setDateOfBirth(LocalDate.of(1990, 1, 1));
-		existingTrainee.setAddress("Old Address");
-		existingTrainee.setTrainers(new HashSet<>()); // Initialize trainers set
-
-		when(authManager.getCurrentUser()).thenReturn(existingUser);
-		when(traineeRepository.findByUserUsername(updateRequest.getUsername()))
-				.thenReturn(Optional.of(existingTrainee));
+		TraineeUpdateRequest request = new TraineeUpdateRequest(testUser.getUsername(), "Updated", null, null, null,
+				true);
+		when(authenticationInfoService.getCurrentUsername()).thenReturn(testUser.getUsername());
+		when(traineeRepository.findByUserUsername(testUser.getUsername())).thenReturn(Optional.of(testTrainee));
 		when(userRepository.save(any(User.class))).thenAnswer(i -> i.getArgument(0));
 		when(traineeRepository.save(any(Trainee.class))).thenAnswer(i -> i.getArgument(0));
 
-		// When
-		TraineeProfileResponse response = traineeService.updateTrainee(updateRequest);
-
-		// Then
-		assertNotNull(response);
-		assertEquals(updateRequest.getUsername(), response.getUsername());
-		assertEquals(updateRequest.getFirstName(), response.getFirstName());
-		assertEquals(updateRequest.getLastName(), response.getLastName());
-		assertEquals(updateRequest.getDateOfBirth(), response.getDateOfBirth());
-		assertEquals(updateRequest.getAddress(), response.getAddress());
-
-		verify(authManager).getCurrentUser();
-		verify(userRepository).save(existingUser);
-		verify(traineeRepository).save(existingTrainee);
+		TraineeProfileResponse response = traineeService.updateTrainee(request);
+		assertEquals("Updated", response.getFirstName());
 	}
 
 	@Test
 	void shouldThrowExceptionWhenUpdateTraineeNotFound() {
-		// 1. Arrange - Gerekli koşulları hazırla
-		when(authManager.getCurrentUser()).thenReturn(testUser);
-
-		TraineeUpdateRequest updateRequest = new TraineeUpdateRequest();
-		updateRequest.setUsername(testUser.getUsername());
-
-		when(traineeRepository.findByUserUsername(updateRequest.getUsername())).thenReturn(Optional.empty());
-
-		BaseException exception = assertThrows(BaseException.class, () -> traineeService.updateTrainee(updateRequest));
-
-		assertNotNull(exception);
-
-		assertTrue(exception.getMessage().contains("Trainee profile not found."));
-
-		verify(authManager).getCurrentUser();
-		
-		verify(traineeRepository).findByUserUsername(updateRequest.getUsername());
-		verify(userRepository, never()).save(any(User.class));
-		verify(traineeRepository, never()).save(any(Trainee.class));
+		TraineeUpdateRequest request = new TraineeUpdateRequest(testUser.getUsername(), null, null, null, null, true);
+		when(authenticationInfoService.getCurrentUsername()).thenReturn(testUser.getUsername());
+		when(traineeRepository.findByUserUsername(testUser.getUsername())).thenReturn(Optional.empty());
+		assertThrows(BaseException.class, () -> traineeService.updateTrainee(request));
 	}
 
 	@Test
 	void shouldThrowExceptionWhenUpdateRequestIsNull() {
-
-		when(authManager.getCurrentUser()).thenReturn(new User()); // Provide a dummy User object
-
-		// When & Then
-		Exception thrownException = assertThrows(BaseException.class, () -> traineeService.updateTrainee(null));
-
-		// Assert the exception message as we've refined it
-		assertEquals("Invalid parameter provided. : Update request or username must not be null/empty.",
-				thrownException.getMessage());
-
-		verify(authManager).getCurrentUser(); 
-
-		// Other interactions should still not happen if the null check occurs early.
-		verifyNoInteractions(traineeRepository);
-		verifyNoInteractions(userRepository);
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("any.user");
+		assertThrows(BaseException.class, () -> traineeService.updateTrainee(null));
 	}
 
 	@Test
 	void shouldThrowExceptionWhenUpdateUnauthorized() {
-		// Given
-		User unauthorizedUser = new User();
-		unauthorizedUser.setUsername("Unauthorized.User"); // Create an unauthorized user
-
-		// Mock the current user to be the unauthorized user
-		when(authManager.getCurrentUser()).thenReturn(unauthorizedUser);
-
-		TraineeUpdateRequest updateRequest = new TraineeUpdateRequest();
-		updateRequest.setUsername(testUser.getUsername()); // "Test.Trainee"
-
-		// When & Then
-		// Call the service with the unauthorized user trying to update another trainee
-		BaseException exception = assertThrows(BaseException.class, () -> traineeService.updateTrainee(updateRequest));
-
-		// Assert that the exception is an authorization error
-		assertEquals("You are not authorized. : You are not authorized to update this Trainee profile.",
-				exception.getMessage());
-
-		// Verifications
-		// Verify that getCurrentUser was called
-		verify(authManager).getCurrentUser();
-
-		// Verify that findByUserUsername was *never* called in this unauthorized
-		// scenario
-		verify(traineeRepository, never()).findByUserUsername(anyString());
-
-		// Verify that save methods were never called
-		verify(userRepository, never()).save(any(User.class));
-		verify(traineeRepository, never()).save(any(Trainee.class));
+		TraineeUpdateRequest request = new TraineeUpdateRequest("Test.Trainee", null, null, null, null, true);
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("unauthorized.user");
+		assertThrows(BaseException.class, () -> traineeService.updateTrainee(request));
 	}
 
+	// --- updateTraineeTrainersList Tests ---
 	@Test
 	void shouldUpdateTraineeTrainersListSuccessfully() {
-		// Given
-		TraineeUpdateTrainersRequest req = new TraineeUpdateTrainersRequest();
-		req.setTraineeUsername(testUser.getUsername());
-		req.setTrainerUsernames(Arrays.asList("Trainer.One", "Trainer.Two"));
+		TraineeUpdateTrainersRequest request = new TraineeUpdateTrainersRequest(testUser.getUsername(),
+				List.of("Trainer.One"));
+		User trainerUser = new User(2L, "Trainer", "One", "Trainer.One", "p", true, null, null);
+		Trainer trainer = new Trainer(2L, new TrainingType(), trainerUser, new HashSet<>(), new HashSet<>());
 
-		// *** MOCKITO DAVRANIŞLARI ***
-		when(authManager.getCurrentUser()).thenReturn(testUser);
-		when(traineeRepository.findByUserUsername(req.getTraineeUsername())).thenReturn(Optional.of(testTrainee));
+		when(authenticationInfoService.getCurrentUsername()).thenReturn(testUser.getUsername());
+		when(traineeRepository.findByUserUsername(testUser.getUsername())).thenReturn(Optional.of(testTrainee));
+		when(trainerRepository.findByUserUsername("Trainer.One")).thenReturn(Optional.of(trainer));
 
-		when(trainerRepository.findByUserUsername(anyString())).thenAnswer(invocation -> {
-			String username = invocation.getArgument(0);
-			if ("Trainer.One".equals(username)) {
-				return Optional.of(trainer1);
-			}
-			if ("Trainer.Two".equals(username)) {
-				return Optional.of(trainer2);
-			}
-			return Optional.empty();
-		});
+		traineeService.updateTraineeTrainersList(request);
 
-		when(traineeRepository.save(any(Trainee.class))).thenAnswer(i -> {
-			Trainee savedTrainee = i.getArgument(0);
-			savedTrainee.setTrainers(new HashSet<>(Arrays.asList(trainer1, trainer2)));
-			return savedTrainee;
-		});
-
-		when(trainingRepository.save(any(Training.class))).thenAnswer(i -> i.getArgument(0));
-
-		// When
-		List<TrainerInfoResponse> response = traineeService.updateTraineeTrainersList(req);
-
-		// Then
-		assertNotNull(response);
-		assertEquals(2, response.size());
-
-		Set<String> returnedUsernames = response.stream().map(TrainerInfoResponse::getUsername)
-				.collect(Collectors.toSet());
-		Set<String> expectedUsernames = new HashSet<>(Arrays.asList("Trainer.One", "Trainer.Two"));
-		assertEquals(expectedUsernames, returnedUsernames);
-
-		// *** MOCKITO DOĞRULAMALARI ***
-		verify(authManager).getCurrentUser();
-		verify(traineeRepository).findByUserUsername(req.getTraineeUsername());
-		// findByUsername'in 2 kez çağrıldığını doğru şekilde doğrula
-		verify(trainerRepository, times(2)).findByUserUsername(anyString());
-		verify(traineeRepository).save(testTrainee);
-		// deleteByTraineeId'in çağrıldığını doğrula
-		verify(trainingRepository).deleteByTraineeId(testTrainee.getId());
-		// save metodunun 2 kez çağrıldığını doğrula (her bir yeni eğitmen için)
-		verify(trainingRepository, times(2)).save(any(Training.class));
+		assertEquals(1, testTrainee.getTrainers().size());
+		verify(trainingRepository).deleteByTraineeId(anyLong());
+		verify(trainingRepository, times(1)).save(any(Training.class));
 	}
 
 	@Test
 	void shouldClearTraineeTrainersListSuccessfully() {
-		// Given
-		TraineeUpdateTrainersRequest req = new TraineeUpdateTrainersRequest();
-		req.setTraineeUsername(testUser.getUsername());
-		req.setTrainerUsernames(new ArrayList<>()); 
+		TraineeUpdateTrainersRequest request = new TraineeUpdateTrainersRequest(testUser.getUsername(),
+				Collections.emptyList());
+		when(authenticationInfoService.getCurrentUsername()).thenReturn(testUser.getUsername());
+		when(traineeRepository.findByUserUsername(testUser.getUsername())).thenReturn(Optional.of(testTrainee));
 
-		User existingTrainerUser = new User();
-		existingTrainerUser.setUsername("Existing.Trainer");
-		Trainer existingTrainer = new Trainer();
-		existingTrainer.setUser(existingTrainerUser);
+		traineeService.updateTraineeTrainersList(request);
 
-		testTrainee.setTrainers(new HashSet<>(Arrays.asList(existingTrainer))); 
-		testTrainee.setUser(testUser); // Trainee nesnesine User'ı ekledik
-
-		when(authManager.getCurrentUser()).thenReturn(testUser);
-		when(traineeRepository.findByUserUsername(req.getTraineeUsername())).thenReturn(Optional.of(testTrainee));
-		when(traineeRepository.save(any(Trainee.class))).thenAnswer(i -> {
-			Trainee savedTrainee = i.getArgument(0);
-			savedTrainee.setTrainers(new HashSet<>()); // Save işlemi sonucunda boş listeyi set et
-			return savedTrainee;
-		});
-
-		// When
-		List<TrainerInfoResponse> response = traineeService.updateTraineeTrainersList(req);
-
-		// Then
-		assertNotNull(response);
-		assertTrue(response.isEmpty()); 
-
-		verify(authManager).getCurrentUser();
-		verify(traineeRepository).findByUserUsername(req.getTraineeUsername());
-		verify(trainerRepository, never()).findByUserUsername(anyString()); 
-		verify(traineeRepository).save(testTrainee);
+		assertTrue(testTrainee.getTrainers().isEmpty());
+		verify(trainerRepository, never()).findByUserUsername(anyString());
 	}
-
-	// --- Other tests ---
 
 	@Test
 	void shouldThrowExceptionWhenUpdateTrainersRequestIsNull() {
-		
-		when(authManager.getCurrentUser()).thenReturn(new User());
-
-		// traineeService.updateTraineeTrainersList(null) çağrıldığında
-		// NullPointerException fırlatılmasını bekle ve yakala
-		NullPointerException exception = assertThrows(NullPointerException.class,
-				() -> traineeService.updateTraineeTrainersList(null));
-
-		assertNotNull(exception);
-
-		// authManager'ın getCurrentUser metodunun çağrıldığını doğrula
-		verify(authManager).getCurrentUser();
-
-		// doğrula
-		verifyNoInteractions(traineeRepository);
-		verifyNoInteractions(userRepository);
-	}
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("any.user");
+		assertThrows(NullPointerException.class, () -> traineeService.updateTraineeTrainersList(null));	}
 
 	@Test
 	void shouldThrowExceptionWhenTraineeForUpdateTrainersNotFound() {
-
-		TraineeUpdateTrainersRequest req = new TraineeUpdateTrainersRequest();
-		req.setTraineeUsername("NonExistent.Trainee");
-		req.setTrainerUsernames(Arrays.asList("Trainer.One"));
-
-		User authorizedButNonExistentTargetUser = new User();
-		authorizedButNonExistentTargetUser.setUsername(req.getTraineeUsername());
-
-		when(authManager.getCurrentUser()).thenReturn(authorizedButNonExistentTargetUser);
-		when(traineeRepository.findByUserUsername(req.getTraineeUsername())).thenReturn(Optional.empty());
-
-		// When & Then
-		BaseException exception = assertThrows(BaseException.class,
-				() -> traineeService.updateTraineeTrainersList(req));
-
-		assertEquals("Resource not found. : Trainee with username " + req.getTraineeUsername() + " not found.",
-				exception.getMessage());
-
-		// Verifications
-		verify(authManager).getCurrentUser();
-		verify(traineeRepository).findByUserUsername(req.getTraineeUsername());
-		verifyNoInteractions(trainerRepository);
-		verify(traineeRepository, never()).save(any(Trainee.class));
+		TraineeUpdateTrainersRequest request = new TraineeUpdateTrainersRequest("NonExistent.Trainee",
+				Collections.emptyList());
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("NonExistent.Trainee");
+		when(traineeRepository.findByUserUsername("NonExistent.Trainee")).thenReturn(Optional.empty());
+		assertThrows(BaseException.class, () -> traineeService.updateTraineeTrainersList(request));
 	}
 
 	@Test
 	void shouldThrowExceptionWhenUpdateTrainersUnauthorized() {
-		// Given
-		User unauthorizedUser = new User();
-		unauthorizedUser.setUsername("Unauthorized.User");
-
-		when(authManager.getCurrentUser()).thenReturn(unauthorizedUser);
-
-		TraineeUpdateTrainersRequest request = new TraineeUpdateTrainersRequest();
-		request.setTraineeUsername(testUser.getUsername());
-
-		// When & Then
-		BaseException exception = assertThrows(BaseException.class,
-				() -> traineeService.updateTraineeTrainersList(request));
-
-		assertEquals("You are not authorized. : You are not authorized to update trainers list for other trainees.",
-				exception.getMessage());
-
-		// Verifications
-		verify(authManager).getCurrentUser();
-		verifyNoInteractions(traineeRepository);
-		verifyNoInteractions(userRepository); 
+		TraineeUpdateTrainersRequest request = new TraineeUpdateTrainersRequest(testUser.getUsername(),
+				Collections.emptyList());
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("unauthorized.user");
+		assertThrows(BaseException.class, () -> traineeService.updateTraineeTrainersList(request));
 	}
 
 	@Test
 	void shouldThrowExceptionWhenTrainerInListNotFound() {
-		TraineeUpdateTrainersRequest req = new TraineeUpdateTrainersRequest();
-		req.setTraineeUsername(testUser.getUsername());
-		req.setTrainerUsernames(Arrays.asList("Trainer.One", "NonExistent.Trainer"));
-
-		User trainerUser1 = new User();
-		trainerUser1.setUsername("Trainer.One");
-		trainerUser1.setActive(true);
-		Trainer trainer1 = new Trainer();
-		trainer1.setUser(trainerUser1);
-
-		when(authManager.getCurrentUser()).thenReturn(testUser);
-		when(traineeRepository.findByUserUsername(req.getTraineeUsername())).thenReturn(Optional.of(testTrainee));
-		when(trainerRepository.findByUserUsername("Trainer.One")).thenReturn(Optional.of(trainer1));
+		TraineeUpdateTrainersRequest request = new TraineeUpdateTrainersRequest(testUser.getUsername(),
+				List.of("NonExistent.Trainer"));
+		when(authenticationInfoService.getCurrentUsername()).thenReturn(testUser.getUsername());
+		when(traineeRepository.findByUserUsername(testUser.getUsername())).thenReturn(Optional.of(testTrainee));
 		when(trainerRepository.findByUserUsername("NonExistent.Trainer")).thenReturn(Optional.empty());
-
-		BaseException exception = assertThrows(BaseException.class,
-				() -> traineeService.updateTraineeTrainersList(req));
-
-		assertTrue(exception.getMessage().contains("Trainer with username NonExistent.Trainer not found."));
-		verify(trainerRepository).findByUserUsername("NonExistent.Trainer");
-		verify(traineeRepository, never()).save(any(Trainee.class));
+		assertThrows(BaseException.class, () -> traineeService.updateTraineeTrainersList(request));
 	}
 
 	@Test
 	void shouldThrowExceptionWhenTrainerInListInactive() {
-		TraineeUpdateTrainersRequest req = new TraineeUpdateTrainersRequest();
-		req.setTraineeUsername(testUser.getUsername());
-		req.setTrainerUsernames(Arrays.asList("Inactive.Trainer"));
-
+		TraineeUpdateTrainersRequest request = new TraineeUpdateTrainersRequest(testUser.getUsername(),
+				List.of("Inactive.Trainer"));
 		User inactiveTrainerUser = new User();
-		inactiveTrainerUser.setUsername("Inactive.Trainer");
 		inactiveTrainerUser.setActive(false);
 		Trainer inactiveTrainer = new Trainer();
 		inactiveTrainer.setUser(inactiveTrainerUser);
 
-		when(authManager.getCurrentUser()).thenReturn(testUser);
-		when(traineeRepository.findByUserUsername(req.getTraineeUsername())).thenReturn(Optional.of(testTrainee));
+		when(authenticationInfoService.getCurrentUsername()).thenReturn(testUser.getUsername());
+		when(traineeRepository.findByUserUsername(testUser.getUsername())).thenReturn(Optional.of(testTrainee));
 		when(trainerRepository.findByUserUsername("Inactive.Trainer")).thenReturn(Optional.of(inactiveTrainer));
 
-		BaseException exception = assertThrows(BaseException.class,
-				() -> traineeService.updateTraineeTrainersList(req));
-
-		assertTrue(exception.getMessage().contains("Trainer Inactive.Trainer is not active. Cannot assign."));
-		verify(trainerRepository).findByUserUsername("Inactive.Trainer");
-		verify(traineeRepository, never()).save(any(Trainee.class));
-	}
-
-	@Test
-	void shouldThrowExceptionWhenTraineeForUpdateTrainersIsInactive() {
-		// Given
-		TraineeUpdateTrainersRequest req = new TraineeUpdateTrainersRequest();
-		req.setTraineeUsername(testUser.getUsername());
-		req.setTrainerUsernames(Arrays.asList("Trainer.One"));
-
-		testUser.setActive(false); // Make the trainee's user inactive
-		testTrainee.setUser(testUser); // Update the testTrainee with the inactive user
-
-		when(authManager.getCurrentUser()).thenReturn(testUser);
-		when(traineeRepository.findByUserUsername(req.getTraineeUsername())).thenReturn(Optional.of(testTrainee));
-
-		// When & Then
-		BaseException exception = assertThrows(BaseException.class,
-				() -> traineeService.updateTraineeTrainersList(req));
-
-		assertTrue(exception.getMessage().contains(
-				"Trainee " + req.getTraineeUsername() + " is not active. Cannot update their trainers list."));
-
-		verify(authManager).getCurrentUser();
-		verify(traineeRepository).findByUserUsername(req.getTraineeUsername());
-		verifyNoInteractions(trainerRepository);
-		verify(traineeRepository, never()).save(any(Trainee.class));
+		assertThrows(BaseException.class, () -> traineeService.updateTraineeTrainersList(request));
 	}
 
 	// --- activateDeactivateTrainee Tests ---
-
 	@Test
-	void shouldActivateTraineeSuccessfully() {
-		activationRequest.setIsActive(true);
-		testTrainee.getUser().setActive(false);
+	void shouldDeactivateTraineeSuccessfully() {
+		UserActivationRequest request = new UserActivationRequest(testUser.getUsername(), false);
+		testUser.setActive(true);
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("any.user");
+		when(traineeRepository.findByUserUsername(testUser.getUsername())).thenReturn(Optional.of(testTrainee));
+		when(userRepository.save(any(User.class))).thenAnswer(i -> i.getArgument(0));
 
-		when(authManager.getCurrentUser()).thenReturn(testUser);
-		when(traineeRepository.findByUserUsername(activationRequest.getUsername()))
-				.thenReturn(Optional.of(testTrainee));
-		when(userRepository.save(any(User.class))).thenAnswer(i -> i.getArgument(0)); 
-																						
+		traineeService.activateDeactivateTrainee(request);
 
-		traineeService.activateDeactivateTrainee(activationRequest);
-
-		// testTrainee'nin user'ının aktifliği kontrol ediliyor
-		assertTrue(testTrainee.getUser().isActive());
-
-		verify(authManager).getCurrentUser();
-		verify(traineeRepository).findByUserUsername(activationRequest.getUsername());
-		verify(userRepository).save(testTrainee.getUser());
-		verify(traineeRepository).save(testTrainee);
+		assertFalse(testUser.isActive());
 	}
 
 	@Test
-	void shouldDeactivateTraineeSuccessfully() {
-		activationRequest.setIsActive(false);
-		testTrainee.getUser().setActive(true);
-
-		when(authManager.getCurrentUser()).thenReturn(testUser);
-		when(traineeRepository.findByUserUsername(activationRequest.getUsername()))
-				.thenReturn(Optional.of(testTrainee));
+	void shouldActivateTraineeSuccessfully() {
+		UserActivationRequest request = new UserActivationRequest(testUser.getUsername(), true);
+		testUser.setActive(false);
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("any.user");
+		when(traineeRepository.findByUserUsername(testUser.getUsername())).thenReturn(Optional.of(testTrainee));
 		when(userRepository.save(any(User.class))).thenAnswer(i -> i.getArgument(0));
 
-		traineeService.activateDeactivateTrainee(activationRequest);
+		traineeService.activateDeactivateTrainee(request);
 
-		assertFalse(testTrainee.getUser().isActive());
-
-		verify(authManager).getCurrentUser();
-		verify(traineeRepository).findByUserUsername(activationRequest.getUsername());
-		verify(userRepository).save(testTrainee.getUser());
-		verify(traineeRepository).save(testTrainee);
+		assertTrue(testUser.isActive());
 	}
 
 	@Test
 	void shouldNotChangeActivationStatusIfAlreadyInRequestedState() {
-		// Durum zaten aktif, istek de aktif
-		activationRequest.setIsActive(true);
-		testTrainee.getUser().setActive(true);
+		UserActivationRequest request = new UserActivationRequest(testUser.getUsername(), true);
+		testUser.setActive(true);
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("any.user");
+		when(traineeRepository.findByUserUsername(testUser.getUsername())).thenReturn(Optional.of(testTrainee));
 
-		when(authManager.getCurrentUser()).thenReturn(testUser);
-		when(traineeRepository.findByUserUsername(activationRequest.getUsername()))
-				.thenReturn(Optional.of(testTrainee));
+		traineeService.activateDeactivateTrainee(request);
 
-		traineeService.activateDeactivateTrainee(activationRequest);
-
-		assertTrue(testTrainee.getUser().isActive());
-
-		verify(authManager).getCurrentUser();
-		verify(traineeRepository).findByUserUsername(activationRequest.getUsername());
-		verify(userRepository, never()).save(any(User.class)); // save çağrılmamalı
-		verify(traineeRepository, never()).save(any(Trainee.class)); // save çağrılmamalı
+		verify(userRepository, never()).save(any());
 	}
 
 	@Test
 	void shouldThrowExceptionWhenTraineeForActivationNotFound() {
-		when(authManager.getCurrentUser()).thenReturn(testUser);
-		when(traineeRepository.findByUserUsername(activationRequest.getUsername())).thenReturn(Optional.empty());
-
-		BaseException exception = assertThrows(BaseException.class,
-				() -> traineeService.activateDeactivateTrainee(activationRequest));
-
-		assertTrue(exception.getMessage()
-				.contains("Trainee with username '" + activationRequest.getUsername() + "' not found."));
-
-		verify(authManager).getCurrentUser();
-		verify(traineeRepository).findByUserUsername(activationRequest.getUsername());
-		verify(userRepository, never()).save(any(User.class));
+		UserActivationRequest request = new UserActivationRequest("non.existent", true);
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("any.user");
+		when(traineeRepository.findByUserUsername("non.existent")).thenReturn(Optional.empty());
+		assertThrows(BaseException.class, () -> traineeService.activateDeactivateTrainee(request));
 	}
 
 	@Test
 	void shouldThrowExceptionWhenActivationRequestIsNull() {
-
-		when(authManager.getCurrentUser()).thenReturn(new User());
-
-		// When & Then
-
-		NullPointerException exception = assertThrows(NullPointerException.class,
-				() -> traineeService.activateDeactivateTrainee(null));
-
-		assertTrue(exception.getMessage().contains(
-				"Cannot invoke \"com.epam.gym_crm.api.dto.request.UserActivationRequest.getUsername()\" because \"request\" is null"));
-
-		// authManager.getCurrentUser() çağrısının yapıldığını doğruluyoruz.
-		verify(authManager).getCurrentUser();
-
-		verifyNoInteractions(traineeRepository);
-		verifyNoInteractions(userRepository);
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("any.user");
+		assertThrows(NullPointerException.class, () -> traineeService.activateDeactivateTrainee(null));
 	}
 
 	// --- deleteTraineeById Tests ---
-
 	@Test
 	void shouldDeleteTraineeByIdSuccessfully() {
-		when(authManager.getCurrentUser()).thenReturn(testUser);
-		when(traineeRepository.findById(testTrainee.getId())).thenReturn(Optional.of(testTrainee));
-		doNothing().when(traineeRepository).delete(testTrainee);
+		when(authenticationInfoService.getCurrentUsername()).thenReturn(testUser.getUsername());
+		when(traineeRepository.findById(1L)).thenReturn(Optional.of(testTrainee));
 
-		traineeService.deleteTraineeById(testTrainee.getId());
+		traineeService.deleteTraineeById(1L);
 
-		verify(authManager).getCurrentUser();
-		verify(traineeRepository).findById(testTrainee.getId());
 		verify(traineeRepository).delete(testTrainee);
 	}
 
 	@Test
 	void shouldThrowExceptionWhenDeleteTraineeByIdNotFound() {
-		when(authManager.getCurrentUser()).thenReturn(testUser);
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("any.user");
 		when(traineeRepository.findById(999L)).thenReturn(Optional.empty());
-
-		BaseException exception = assertThrows(BaseException.class, () -> traineeService.deleteTraineeById(999L));
-		// Servis kodunuzdaki mesaj: "No trainee found to delete with ID: " + id
-		assertTrue(exception.getMessage().contains("No trainee found to delete with ID: 999"));
-
-		verify(authManager).getCurrentUser();
-		verify(traineeRepository).findById(999L);
-		verify(traineeRepository, never()).delete(any(Trainee.class));
+		assertThrows(BaseException.class, () -> traineeService.deleteTraineeById(999L));
 	}
 
 	@Test
 	void shouldThrowExceptionWhenDeleteTraineeByIdWithNullId() {
-		when(authManager.getCurrentUser()).thenReturn(testUser); // Servis metodu authManager kullanıyor
-		BaseException exception = assertThrows(BaseException.class, () -> traineeService.deleteTraineeById(null));
-		// Servis kodunuzdaki mesaj: "Trainee ID for deletion must be a positive value.
-		// Provided ID: " + id
-		assertTrue(
-				exception.getMessage().contains("Trainee ID for deletion must be a positive value. Provided ID: null"));
-		verify(authManager).getCurrentUser(); // Kullanılıyorsa verify et
-		verifyNoInteractions(traineeRepository);
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("any.user");
+		assertThrows(BaseException.class, () -> traineeService.deleteTraineeById(null));
 	}
 
 	@Test
 	void shouldThrowExceptionWhenDeleteTraineeByIdUnauthorized() {
-		User unauthorizedUser = new User();
-		unauthorizedUser.setUsername("Unauthorized.User");
-
-		when(authManager.getCurrentUser()).thenReturn(unauthorizedUser);
-		when(traineeRepository.findById(testTrainee.getId())).thenReturn(Optional.of(testTrainee));
-
-		BaseException exception = assertThrows(BaseException.class,
-				() -> traineeService.deleteTraineeById(testTrainee.getId()));
-		// Servis kodunuzdaki mesaj: "You are not authorized to delete this Trainee
-		// profile."
-		assertTrue(exception.getMessage().contains("You are not authorized to delete this Trainee profile."));
-
-		verify(authManager).getCurrentUser();
-		verify(traineeRepository).findById(testTrainee.getId());
-		verify(traineeRepository, never()).delete(any(Trainee.class));
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("unauthorized.user");
+		when(traineeRepository.findById(1L)).thenReturn(Optional.of(testTrainee));
+		assertThrows(BaseException.class, () -> traineeService.deleteTraineeById(1L));
 	}
 
 	// --- deleteTraineeByUsername Tests ---
-
 	@Test
 	void shouldDeleteTraineeByUsernameSuccessfully() {
-		when(authManager.getCurrentUser()).thenReturn(testUser);
+		when(authenticationInfoService.getCurrentUsername()).thenReturn(testUser.getUsername());
 		when(traineeRepository.findByUserUsername(testUser.getUsername())).thenReturn(Optional.of(testTrainee));
-		doNothing().when(traineeRepository).delete(testTrainee);
 
 		traineeService.deleteTraineeByUsername(testUser.getUsername());
 
-		// Servis kodunuzda checkAuthentication() doğrudan çağrılmıyor
-		verify(authManager).getCurrentUser();
-		verify(traineeRepository).findByUserUsername(testUser.getUsername());
 		verify(traineeRepository).delete(testTrainee);
 	}
 
 	@Test
 	void shouldThrowExceptionWhenDeleteTraineeByUsernameNotFound() {
-		when(authManager.getCurrentUser()).thenReturn(testUser); // testUser'ın username'i "Test.Trainee"
-
-		String usernameToDelete = "Another.Trainee";
-
-		// Metodu, yetkisiz bir kullanıcının (testUser) başka bir kullanıcıyı silmeye
-		// çalıştığı senaryo ile çağırıyoruz.
-		BaseException exception = assertThrows(BaseException.class,
-				() -> traineeService.deleteTraineeByUsername(usernameToDelete));
-
-		// Beklenen hata: Yetkilendirme hatası
-		assertEquals("You are not authorized. : You are not authorized to delete this Trainee profile.",
-				exception.getMessage());
-
-		// Verifications
-		verify(authManager).getCurrentUser();
-
-		verify(traineeRepository, never()).findByUserUsername(anyString()); // Bu satır zaten doğruydu
-		verify(traineeRepository, never()).delete(any(Trainee.class)); // Bu satır da doğruydu
+		String usernameToDelete = "non.existent";
+		when(authenticationInfoService.getCurrentUsername()).thenReturn(usernameToDelete); 
+																							
+		when(traineeRepository.findByUserUsername(usernameToDelete)).thenReturn(Optional.empty());
+		assertThrows(BaseException.class, () -> traineeService.deleteTraineeByUsername(usernameToDelete));
 	}
 
 	@Test
 	void shouldThrowExceptionWhenDeleteTraineeByUsernameWithNullOrEmpty() {
-
-		when(authManager.getCurrentUser()).thenReturn(new User());
-
-		// When & Then (Testing for null username)
-		BaseException exceptionNull = assertThrows(BaseException.class,
-				() -> traineeService.deleteTraineeByUsername(null));
-
-		assertEquals("Invalid parameter provided. : Username must not be null or empty.", exceptionNull.getMessage());
-
-		// When & Then (Testing for empty username)
-		BaseException exceptionEmpty = assertThrows(BaseException.class,
-				() -> traineeService.deleteTraineeByUsername(""));
-
-		assertEquals("Invalid parameter provided. : Username must not be null or empty.", exceptionEmpty.getMessage());
-
-		verify(authManager, times(2)).getCurrentUser();
-
-		verifyNoInteractions(traineeRepository);
-		verifyNoInteractions(userRepository);
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("any.user");
+		assertThrows(BaseException.class, () -> traineeService.deleteTraineeByUsername(null));
+		assertThrows(BaseException.class, () -> traineeService.deleteTraineeByUsername(""));
 	}
 
 	@Test
 	void shouldThrowExceptionWhenDeleteTraineeByUsernameUnauthorized() {
-		// Given
-		User unauthorizedUser = new User();
-		unauthorizedUser.setUsername("Unauthorized.User"); // Yetkisiz kullanıcı
-
-		when(authManager.getCurrentUser()).thenReturn(unauthorizedUser); // Yetkisiz kullanıcı dönsün
-
-		BaseException exception = assertThrows(BaseException.class,
-				() -> traineeService.deleteTraineeByUsername(testUser.getUsername()));
-
-		// Beklenen hata: Yetkilendirme hatası
-		assertEquals("You are not authorized. : You are not authorized to delete this Trainee profile.",
-				exception.getMessage());
-
-		// Verifications
-		verify(authManager).getCurrentUser();
-
-		verify(traineeRepository, never()).findByUserUsername(anyString());
-		verify(traineeRepository, never()).delete(any(Trainee.class));
+		when(authenticationInfoService.getCurrentUsername()).thenReturn("unauthorized.user");
+		assertThrows(BaseException.class, () -> traineeService.deleteTraineeByUsername(testUser.getUsername()));
 	}
 }
